# flextunnel

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  README.md  agent.toml.example  build-ios.sh  build-linux.sh  client.toml.example  install-agent-service.ps1  install-agent.ps1  install-agent.sh  install.ps1  install.sh  server.toml.example
.github/workflows/: ci.yml  pages.yml  release.yml  test.yml
crates/flextunnel-agent/: Cargo.toml
crates/flextunnel-agent/src/: lock.rs  main.rs
crates/flextunnel-cli/: Cargo.toml
crates/flextunnel-cli/src/: client_session.rs  forwards.rs  instance.rs  ipc.rs  lock.rs  main.rs  prompt.rs
crates/flextunnel-cli/src/tui/: form.rs  mod.rs  view.rs
crates/flextunnel-core/: Cargo.toml
crates/flextunnel-core/src/: app.rs  auth.rs  blocklist.rs  config.rs  error.rs  forwards.rs  lib.rs  lock.rs  machine_id.rs  secret.rs  udp_lock.rs
crates/flextunnel-core/src/proxy/: agent.rs  bridge.rs  client.rs  dial.rs  dns_forward.rs  e2e_tests.rs  forward.rs  http.rs  mod.rs  reserved.rs  routed_set.rs  server.rs  signaling.rs  socks5.rs  status_page.rs  whitelist.rs
crates/flextunnel-core/src/transport/: endpoint.rs  mod.rs  paths.rs
crates/flextunnel-core/templates/: reserved_404.html  server_status.html  server_status.txt
crates/flextunnel-desktop/: Cargo.toml  README.md
crates/flextunnel-desktop/icons/: icon.icns
crates/flextunnel-desktop/src/: app.rs  config.rs  forward.rs  icon.rs  logging.rs  main.rs  style.rs  tray.rs  tunnel.rs  view.rs
crates/flextunnel-ffi/: Cargo.toml
crates/flextunnel-ffi/src/: lib.rs
docs/: architecture.md  duplicate-detection-roadmap.md  fixed-port-vanity-ips.md  http-proxy-roadmap.md  port-forward-creativity.md  port-forwarding.md  proxy-usage.md  socks5-usage.md  windows-service.md
ios/: flextunnel.h
src/: auth.rs  config.rs  error.rs  main.rs  secret.rs
src/proxy/: client.rs  mod.rs  server.rs  signaling.rs  socks5.rs
src/transport/: endpoint.rs  mod.rs
