[workspace]
members = ["crates/*"]
resolver = "3"
# A bare `cargo build` skips only the iOS staticlib (built explicitly via
# build-ios.sh with `-p flextunnel-ffi`); `--workspace` still covers all four for
# clippy/test.
default-members = [
    "crates/flextunnel-core",
    "crates/flextunnel-cli",
    "crates/flextunnel-agent",
]

[workspace.package]
version = "0.0.30"
edition = "2024"
description = "SOCKS5-over-QUIC proxy via iroh P2P"

[workspace.dependencies]
anyhow = "1"
askama = "0.16.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
ipnetwork = "0.21"
iroh = "1.0.0"
iroh-mdns-address-lookup = "0.4.0"
libc = "0.2"
log = "0.4"
n0-future = "0.3"
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "1"
url = "2"
tempfile = "3.24.0"
flextunnel-core = { path = "crates/flextunnel-core" }

# Profiles are only honored in the workspace root manifest.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
