[package]
name = "flextunnel-agent"
version.workspace = true
edition.workspace = true
description = "flextunnel reverse-routing agent (Linux-only exit point)"

[[bin]]
name = "flextunnel-agent"
path = "src/main.rs"

[dependencies]
flextunnel-core.workspace = true
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
