[package]
name = "flextunnel-cli"
version.workspace = true
edition.workspace = true
description.workspace = true

[[bin]]
name = "flextunnel"
path = "src/main.rs"

[dependencies]
flextunnel-core.workspace = true
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ratatui.workspace = true

[dev-dependencies]
tempfile.workspace = true
