[package]
name = "flextunnel-core"
version.workspace = true
edition.workspace = true
description.workspace = true

[lib]
name = "flextunnel_core"
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
iroh.workspace = true
iroh-mdns-address-lookup.workspace = true
log.workspace = true
rand.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
