# Tray GUI for the flextunnel client. macOS and Windows only (keychain +
# tray backends); not in the workspace default-members so server-side
# `cargo build` on Linux stays unaffected — build with `-p flextunnel-desktop`.
[package]
name = "flextunnel-desktop"
version.workspace = true
edition.workspace = true
description = "Tray GUI for the flextunnel client (macOS and Windows)"

[dependencies]
flextunnel-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
eframe = "0.35"
tray-icon = "0.24"
keyring-core = "1"
arboard = "3"
env_filter = "2"
tiny-skia = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }
# Only for the re-exported winit (activation policy); version must track eframe.
egui-winit = { version = "0.35", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-native-keyring-store = "1"
