[package]
name = "flextunnel-ffi"
version.workspace = true
edition.workspace = true
description.workspace = true

# `name = "flextunnel"` so the static archive is `libflextunnel.a`, the name the
# iOS Xcode project (../flextunnel-ios) links against.
[lib]
name = "flextunnel"
crate-type = ["staticlib"]

[dependencies]
flextunnel-core.workspace = true
env_logger.workspace = true
iroh.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
